// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-bot any new_issue 1`] = `
Object {
  "columnId": "autoid-3",
}
`;

exports[`project-bot any new_pullrequest 1`] = `
Object {
  "columnId": "autoid-3",
}
`;

exports[`project-bot closed_issue 1`] = `
Object {
  "cardId": "card-id",
  "columnId": "autoid-3",
}
`;

exports[`project-bot demilestoned_issue 1`] = `
Object {
  "cardId": "card-id",
  "columnId": "autoid-3",
}
`;

exports[`project-bot edited_issue 1`] = `
Object {
  "cardId": "card-id",
  "columnId": "autoid-3",
}
`;

exports[`project-bot milestoned_issue 1`] = `
Object {
  "cardId": "card-id",
  "columnId": "autoid-3",
}
`;

exports[`project-bot new_issue 1`] = `
Object {
  "columnId": "autoid-3",
}
`;

exports[`project-bot new_pullrequest 1`] = `
Object {
  "columnId": "autoid-3",
}
`;

exports[`project-bot reopened_issue 1`] = `
Object {
  "cardId": "card-id",
  "columnId": "autoid-3",
}
`;
